Fixed gap

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -7,8 +7,7 @@
   display flex
   flex-direction column
   background-color $white
-  padding 24px
-  gap 40px
+  padding 25px
   box-shadow 0 8px 40px rgba(0, 0, 0, 0.1)
   margin-top 39px
   border-radius 8px
@@ -80,6 +79,9 @@
     &:hover
       background-color $orange-hover
 
+  &__social
+    margin-top 24px
+
   &__social-text
     font-weight 600
     font-size 14px
@@ -121,12 +123,10 @@
     display flex
     align-items center
     flex-direction column
-    gap 10px
 
     @media (min-width $screen-sm)
       flex-direction row
       justify-content space-between
-      gap unset
 
   &__social-item
     display flex
@@ -134,7 +134,7 @@
     align-items center
     width 144px
     padding 8px 0
-    gap 10px
+    margin-bottom 10px
     border-radius 4px
     border 1px solid #AAAAAA
     color $color-dark
